Fix on scrollbars

--- a/src/styles/_apps_base.sass
+++ b/src/styles/_apps_base.sass
@@ -1,9 +1,9 @@
 ::-webkit-scrollbar
-	width: 5px
-	height: 5px
+	width: 9px
+	height: 9px
 
 ::-webkit-scrollbar-track
-	background-color: rgba($color-background, .2)
+	background-color: transparent
 
 ::-webkit-scrollbar-thumb
 	background-color: rgba($color-text-dark-hint, .6)
